lightContrast fix.

--- a/Framework/v0.2/less/colors.less
+++ b/Framework/v0.2/less/colors.less
@@ -396,6 +396,7 @@
       }
     }
     .s-swatch-@{name}--light {
+      background-color: lighten(@fill, @lightContrast);
       color: @fill;
     }
 }
